--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="javascripts/script.js"></script>
 
   <title>Zhouliyang.GitHub.io</title>
-  <meta name="description" content="">
+  <meta name="description" content="博客使用教程">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -25,7 +25,7 @@
       <h1 class="title">Zhouliyang.GitHub.io</h1>
     </header>
     <div id="container">
-      <p class="tagline"></p>
+      <p class="tagline">博客使用教程</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
